# openstack-ansible

./: .ansible-lint  .gitignore  .gitreview  CONTRIBUTING.md  CONTRIBUTING.rst  Changelog.md  LICENSE.txt  README.rst  Vagrantfile  ansible-collection-requirements.yml  ansible-role-requirements.yml  ansible-role-requirements.yml.example  bindep.txt  dev-requirements.txt  development-stack.rst  global-requirement-pins.txt  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt
etc/: README.rst
group_vars/: aodh_all.yml  ceilometer_all.yml  ceph_all.yml  cinder_all.yml  galera_all.yml  glance_all.yml  haproxy_all.yml  heat_all.yml  horizon_all.yml  hosts.yml  ironic-compute_hosts.yml  ironic_all.yml  ironic_compute.yml  keystone_all.yml  magnum_all.yml  memcached.yml  neutron_all.yml  nova_all.yml  octavia_all.yml  repo_all.yml  swift_all.yml  tacker_all.yml  trove_all.yml  utility_all.yml
host_vars/: localhost.yml
inventory/: dynamic_inventory.py  inventory.ini  openstack_inventory.json
lib/: dictutils.py  filesystem.py  generate.py  ip.py  manage.py  tools.py
osa_toolkit/: dictutils.py  filesystem.py  generate.py  ip.py  manage.py  releasing.py  tools.py
playbooks/: ansible.cfg  archive-container.yml  build-containers.yml  ceph-install.yml  ceph-nfs-install.yml  ceph-pools.yml  ceph-rgw-install.yml  ceph-rgw-keystone-setup.yml  certificate-authority.yml  certificate-generate.yml  certificate-ssh-authority.yml  cinder-all.yml  cinder-api.yml  cinder-common.yml  cinder-scheduler.yml  clone-container.yml  containers-deploy.yml  containers-lxc-create.yml  containers-lxc-destroy.yml  containers-lxc-host.yml  containers-nspawn-create.yml  containers-nspawn-destroy.yml  containers-nspawn-host.yml  elasticsearch-install.yml  es2unix-install.yml  etcd-install.yml  galera-bootstrap.yml  galera-install.yml  galera-startup.yml  galera-stop.yml  glance-api.yml  glance-common.yml  glance-registry.yml  haproxy-install.yml  healthcheck-hosts.yml  healthcheck-infrastructure.yml  healthcheck-openstack.yml  heat-all.yml  heat-api-cfn.yml  heat-api.yml  (+101 more)
rpc_deployment/: README.rst  ansible.cfg
scripts/: add-compute.sh  ansible-role-requirements-editer.py  ansible-role-requirements-editor.py  bash-completion  bootstrap-aio.sh  bootstrap-ansible.sh  build-deploy-guide-translated.sh  cloudserver-aio.sh  doc-pot-filter.sh  elsa_repo.py  elsa_repo_config.yml  f5-config.py  f5-monitor.sh  fastest-infra-wheel-mirror.py  federated-login.sh  gate-check-commit.sh  gate-check-docs.sh  gate-check-lint.sh  gen-config.py  general_labsetup.sh  get-ansible-collection-requirements.yml  get-ansible-role-requirements.yml  get-pypi-pkg-version.py  inventory-manage.py  journal_dump.py  keepalived_haproxy_check.sh  keepalived_pingable_check.sh  labdelete.sh  log-collect.sh  maas_remove.sh  maassetup.sh  openstack-ansible.rc  openstack-ansible.sh  os-ansible-aio-check.sh  os-ansible-role-requirements.py  os-cmd  os-detection.py  osa-aio-heat-template.yml  osad-aio-heat-template.yml  pw-token-gen.py  (+22 more)
ssh/: README.rst
sync/: gen-projects-list.sh
tests/: ansible.cfg  bootstrap-aio.yml  data-plane-test.sh  disk-access-test.sh  get-ansible-role-requirements.yml  test-upstream-shas.yml  test-vars-overrides.yml  test_dictutils.py  test_filesystem.py  test_inventory.py  test_ip.py  test_manage.py  test_releases.py  tests-repo-clone.sh
tools/: README.md  install.py  (+1 more)
(+4316 files in other folders)
