[metadata]
name = openstack-ansible
summary = Ansible playbooks for deploying OpenStack
description_file =
    README.rst
license = Apache-2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/openstack-ansible/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1

[files]
packages = osa_toolkit

[options.extras_require]
releases =
    ruamel.yaml
    Jinja2

[options.entry_points]
console_scripts =
    openstack-ansible-inventory = osa_toolkit.generate:main
    openstack-ansible-inventory-manage = osa_toolkit.manage:main
    openstack-ansible-releases = osa_toolkit.releasing:main [releases]
